[gd_scene load_steps=3 format=2]

[ext_resource path="res://GDbutt.tres" type="Theme" id=1]
[ext_resource path="res://AddNewPerson.gd" type="Script" id=2]

[node name="AddNewPerson" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 592.0
margin_bottom = 145.0
theme = ExtResource( 1 )

[node name="Ok" type="Button" parent="Panel"]
margin_left = 272.0
margin_top = 64.0
margin_right = 416.0
margin_bottom = 120.0
theme = ExtResource( 1 )
text = "OK"

[node name="Cancel" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 120.0
theme = ExtResource( 1 )
text = "Cancel"

[node name="Name" type="LineEdit" parent="Panel"]
margin_left = 8.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 52.0
hint_tooltip = "type your name here"
theme = ExtResource( 1 )

[node name="VisitorBox" type="CheckBox" parent="Panel"]
margin_left = 64.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 106.0
theme = ExtResource( 1 )
text = "Visitor"

[connection signal="pressed" from="Panel/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_Cancel_pressed"]
